# humppa

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
.github/workflows/: msvc.yml
hatsapuri/: CMakeLists.txt  hatsapuri.cpp
kuusi/: CMakeLists.txt  Cargo.toml  kuusi.cpp  kuusi.rs
niukka/: CMakeLists.txt  niukka.cpp  readme.md
pertti/: CMakeLists.txt  Cargo.toml  pertti.cpp  pertti.rs
poelkky/: CMakeLists.txt  poelkky.cpp
pultsarit/: CMakeLists.txt  pultsarit.cpp
ruletti/: CMakeLists.txt  ruletti.cpp
rutka/: CMakeLists.txt  readme.md  rutka.cpp
syntetisaattori/: CMakeLists.txt  syntetisaattori.cpp
tsydegeeli/: CMakeLists.txt  tsydegeeli.cpp
